tests/fixtures/multi_module/valid/cross_module_type/a.furqan
bismillah A {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: consume
    not_scope: nothing_excluded
}

tanzil a_deps {
    depends_on: B
}

fn consume(input: Report) -> Integrity {
    return Integrity
}
