tests/fixtures/multi_module/invalid/transitive_type/top.furqan
bismillah Top {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: consume
    not_scope: nothing_excluded
}

tanzil top_deps {
    depends_on: Middle
}

fn use_base(input: BaseType) -> Integrity {
    return Integrity
}
